--- a/package.json
+++ b/package.json
@@ -10,19 +10,25 @@
   },
   "private": true,
   "dependencies": {
+    "15": "^0.0.0",
     "@angular/animations": "^15.2.8",
-    "@angular/cdk": "^15.2.8",
+    "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.2.8",
     "@angular/compiler": "^15.2.8",
     "@angular/core": "^15.2.8",
     "@angular/forms": "^15.2.8",
-    "@angular/material": "^15.2.8",
+    "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.8",
     "@angular/platform-browser-dynamic": "^15.2.8",
     "@angular/router": "^15.2.8",
+    "angular-cropperjs": "^1.0.2",
     "angular-inject": "^1.1.1",
     "bootstrap": "^5.3.0-alpha1",
+    "ngx-image-cropper": "^6.3.3",
+    "primeicons": "^6.0.1",
+    "primeng": "^15.4.1",
     "rxjs": "~7.5.0",
+    "tesseract.js": "^4.0.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -37,6 +43,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "nodemon": "^2.0.20",
     "typescript": "~4.9.5"
   }
 }
