--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "angular-cropperjs": "^1.0.2",
     "angular-inject": "^1.1.1",
     "bootstrap": "^5.3.0-alpha1",
-    "ngx-image-cropper": "^6.3.3",
+    "ngx-image-cropper": "^7.0.1",
     "primeicons": "^6.0.1",
-    "primeng": "^15.4.1",
+    "primeng": "^15.4.5-lts",
     "rxjs": "~7.5.0",
     "tesseract.js": "^4.0.6",
     "tslib": "^2.3.0",
