--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "angular-cropperjs": "^1.0.2",
     "angular-inject": "^1.1.1",
     "bootstrap": "^5.3.0-alpha1",
+    "domsanitizer": "^0.2.3",
+    "ng2-pdf-viewer": "^9.1.5",
     "ngx-image-cropper": "^7.0.1",
     "primeicons": "^6.0.1",
     "primeng": "^15.4.5-lts",
