--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/common": "^15.2.8",
     "@angular/compiler": "^15.2.8",
     "@angular/core": "^15.2.8",
-    "@angular/forms": "^15.2.8",
+    "@angular/forms": "^15.2.9",
     "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.8",
     "@angular/platform-browser-dynamic": "^15.2.8",
@@ -25,6 +25,8 @@
     "angular-inject": "^1.1.1",
     "bootstrap": "^5.3.0-alpha1",
     "domsanitizer": "^0.2.3",
+    "file-saver": "^2.0.5",
+    "moment": "^2.29.4",
     "ng2-pdf-viewer": "^9.1.5",
     "ngx-image-cropper": "^7.0.1",
     "primeicons": "^6.0.1",
@@ -38,6 +40,7 @@
     "@angular-devkit/build-angular": "^15.2.7",
     "@angular/cli": "~15.2.7",
     "@angular/compiler-cli": "^15.2.8",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
