--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^15.2.8",
     "angular-inject": "^1.1.1",
     "bootstrap": "^5.3.0-alpha1",
+    "crypto-js": "^4.1.1",
     "domsanitizer": "^0.2.3",
     "file-saver": "^2.0.5",
     "moment": "^2.29.4",
@@ -39,6 +40,7 @@
     "@angular-devkit/build-angular": "^15.2.7",
     "@angular/cli": "~15.2.7",
     "@angular/compiler-cli": "^15.2.8",
+    "@types/crypto-js": "^4.1.1",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
