--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "primeicons": "^6.0.1",
     "primeng": "^15.4.1",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.7.20",
     "tesseract.js": "^4.0.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
