--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser": "^15.2.8",
     "@angular/platform-browser-dynamic": "^15.2.8",
     "@angular/router": "^15.2.8",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "angular-inject": "^1.1.1",
+    "bn-ng-idle": "^2.0.5",
     "bootstrap": "^5.3.0-alpha1",
     "crypto-js": "^4.1.1",
     "domsanitizer": "^0.2.3",
